# chip8-emulator

./: .gitignore  CMakeLists.txt  README.md  common.hpp  graphic_design.hpp  interpreter.hpp  main.cpp  program.hpp
cmake/: StandardProjectSettings.cmake
include/: common.hpp  display.hpp  font.hpp  graphic_design.hpp  interpreter.hpp  key_map.hpp
include/instruction/: ADD.hpp  AND.hpp  BCD_STORE.hpp  CALL_SUB.hpp  DRW_SPRITE.hpp  FT_SPT_ADDR.hpp  GET_DELAY_TIMER.hpp  IND_ASSIGN.hpp  IND_INC.hpp  JMP_ADDR.hpp  JMP_REG.hpp  LD_REG_MEM.hpp  NOP.hpp  OR.hpp  RAND.hpp  REG_ASSIGN.hpp  REG_VAL_ASSIGN.hpp  REG_VAL_INC.hpp  Return.hpp  SET_DELAY_TIMER.hpp  SET_SOUND_TIMER.hpp  SHL.hpp  SHR.hpp  SKP_IF_EQUALS.hpp  SKP_KEY_NOT_PRESS.hpp  SKP_KEY_PRESS.hpp  SKP_NOT_EQUALS.hpp  SKP_REG_EQUALS.hpp  SKP_REG_NOT_EQUALS.hpp  STR_REG_MEM.hpp  SUB.hpp  SUBN.hpp  Unknown.hpp  WT_KEY_PRESS.hpp  XOR.hpp  instruction.hpp
instruction/: ADD.hpp  AND.hpp  BCD_STORE.hpp  CALL_SUB.hpp  CLS.hpp  DRW_SPRITE.hpp  FT_SPT_ADDR.hpp  GET_DELAY_TIMER.hpp  IND_ASSIGN.hpp  IND_INC.hpp  JMP_ADDR.hpp  JMP_REG.hpp  LD_REG_MEM.hpp  LICENSE  OR.hpp  README.md  REG_ASSIGN.hpp  REG_VAL_ASSIGN.hpp  REG_VAL_INC.hpp  SET_DELAY_TIMER.hpp  SET_SOUND_TIMER.hpp  SHL.hpp  SHR.hpp  SKP_IF_EQUALS.hpp  SKP_KEY_NOT_PRESS.hpp  SKP_KEY_PRESS.hpp  SKP_NOT_EQUALS.hpp  SKP_REG_EQUALS.hpp  SKP_REG_NOT_EQUALS.hpp  STR_REG_MEM.hpp  SUB.hpp  SUBN.hpp  WT_KEY_PRESS.hpp  XOR.hpp  instruction.hpp
src/: CMakeLists.txt  main.cpp
